Relinked images & updated alt and titles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <img src="/images/logo.svg" alt="Base Apparel" title="Base Apparel Logo">
+    <img src="./images/logo.svg" alt="Base Apparel Logo" title="Base Apparel Logo">
   </header>
 
   <main>
@@ -26,8 +26,8 @@
 
         <form action="#">
           <input type="email" name="" placeholder="Email Address" id="">
-          <img src="/images/icon-error.svg" class="error-icon" alt="">
-          <button type="submit" alt="submit"><img src="/images/icon-arrow.svg" alt=""></button>
+          <img src="./images/icon-error.svg" class="error-icon" alt="error icon" title="error itcon">
+          <button type="submit" alt="submit"><img src="./images/icon-arrow.svg" alt="arrow icon"></button>
           <p class="error-message">Please provide validate email</p>
         </form>
           
