--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <p>Hello fellow shoppers! We're currently building our new fashion store. Add your email below to stay up-to-date with announcements and our launch deals.</p> 
 
         <form action="#">
-          <input type="email" name="" placeholder="Email Address" id="">
+          <input type="email" name="Email" placeholder="Email Address" id="email_address">
           <img src="./images/icon-error.svg" class="error-icon" alt="error icon" title="error itcon">
-          <button type="submit" alt="submit"><img src="./images/icon-arrow.svg" alt="arrow icon"></button>
+          <button type="submit" ><img src="./images/icon-arrow.svg" alt="arrow icon"></button>
           <p class="error-message">Please provide validate email</p>
         </form>
           
